# dev-utility-lab

./: .dockerignore  .env.example  .pre-commit-config.yaml  ACHIEVEMENT_ACCELERATION.md  ACHIEVEMENT_TRACKER.md  ARCHIVAL_LIFECYCLE.md  ARCH_REVIEW_CHECKLIST.md  CHANGELOG.md  CHAOS_TEST_RUNBOOKS.md  CI_AUDIT_RETENTION.md  CI_DEGRADATION_SIMULATION.md  CI_FAILURE_GUIDES.md  CI_GOVERNANCE_NOTES.md  COMMAND_CENTER.md  COMMUNITY_ENGAGEMENT.md  CONTRIBUTING.md  CONTRIBUTOR_FEDERATION.md  CONTRIBUTOR_RECOVERY_GUIDE.md  CONTRIBUTOR_TRACEABILITY.md  CONTRIBUTOR_TRUST_SCORING.md  CROSS_REPO_CI_NOTES.md  DEPENDENCY_CADENCE.md  DEPENDENCY_CERTIFICATION_RULES.md  DEPENDENCY_CONTAINMENT.md  DEPENDENCY_REVIEW_PROCEDURES.md  DEPENDENCY_RISK_CADENCE.md  DEPENDENCY_RISK_POLICY.md  DEPENDENCY_SYNCHRONIZATION.md  Dockerfile  ECOSYSTEM_SUSTAINABILITY_REPORT.md  ECOSYSTEM_SYNCHRONIZATION.md  ENGINEERING_AUDIT.md  ENGINEERING_CONVERGENCE_MANIFEST.md  ENGINEERING_STANDARDS.md  FEDERATION_COMPATIBILITY.md  FEDERATION_DEGRADATION.md  FEDERATION_DRIFT_REPORTING.md  FEDERATION_PARTITION_RECOVERY.md  FEDERATION_ROLLBACK.md  FEDERATION_SCHEDULE.md  (+128 more)
.github/: CODEOWNERS  ESCALATION.md  MAINTAINER_GUIDE.md  ONBOARDING.md  dependabot.yml  pull_request_template.md
benchmarks/: README.md  aggregation_coordinator.py  benchmark_core.py
dashboard/: app.py  config.py
dev_utils/: __init__.py  cli.py  config.py  data_ops.py  logger.py  math_ops.py  random_ops.py  string_ops.py
docs/: ARCHITECTURE_OVERVIEW.md  CONTRIBUTING_POLISH.md  CONTRIBUTING_QUICKSTART.md  CONTRIBUTOR_ESCALATION.md  LTS_POLICY.md  (+35 more)
(+512 files in other folders)
